# otusCourseHW12

./: CMakeLists.txt  main.cpp  mapreduce.cpp  mapreduce.h
.github/workflows/: blank.yml
